fix user drop down text alignment

--- a/app/assets/stylesheets/widgets/_navigation.scss
+++ b/app/assets/stylesheets/widgets/_navigation.scss
@@ -107,6 +107,7 @@
           width: 100%;
           margin-top: 0;
           min-width: 80%;
+          text-align: left;
           &:after, &:before {
             display:none;
           }
